public/css/members.css
/* Global */
@import url('https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap');

:root {
  --main-color: #4a4a4a;
  --secondary-color: #9e78a5;
  --padding-divs: 16px;
  --margin-divs: 16px;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--main-color);
  font-family: 'Marcellus SC', serif;
  color: rgb(206, 206, 206);
  margin: 16px;
}
h2 {
  padding: var(--padding-divs);
  margin: var(--margin-divs);
  color: white;
  align-self: start;
  width: 100%;
}
a {
  text-decoration: none;
  color: white;
}

/* v ===================== Class Frameworks Global ===================== v */
.box-shadow {
  border-radius: 40px;
  background: var(--main-color);
  box-shadow: 5px 5px 14px #3f3f3f, -5px -5px 14px #555555;
}
.inset-gray {
  border-radius: 40px;
  background: var(--main-color);
  box-shadow: inset 5px 5px 14px #3f3f3f, inset -5px -5px 14px #555555;
}
.inset-purple {
  border-radius: 40px;
  background: #755f79;
  box-shadow: inset 5px 5px 10px #5b4a5e, inset -5px -5px 10px #8f7494;
}
.display-flex-column {
  display: flex;
  flex-direction: column;
}
.display-flex-row {
  display: flex;
  flex-direction: row;
}
.justify-align-center {
  justify-content: center;
  align-items: center;
}
/* ^ ===================== Class Frameworks Global ===================== ^ */

/* Containers */
.main-container {
  margin: 16px;
  border-radius: 25px;
  height: 90vh;
  background: var(--main-color);
}

.container-right,
.container-left {
  justify-content: center;
  align-items: center;
  width: 100%;
  margin: 16px auto;
  padding: var(--padding-divs);
  height: 90%;
}
.container-right {
  order: 2;
  width: 30%;
}
.container-left {
  order: 1;
  width: 70%;
}

/* ===================== LEFT CONTAINER ===================== */
.user-profile {
  margin: 16px auto;
  width: 100%;
  height: 10%;
}

/* Characters */
.char-fav-container {
  width: 100%;
  height: 30%;
  margin: 16px auto;
}
.characters, .fav-actions{
  width: 100%;
}
.characters {
  border-top-left-radius: 40px;
  border-bottom-left-radius: 40px;
  background-color: #4a4a4a;
  height: 100%;
}
.fav-actions {
  border-top-right-radius: 40px;
  border-bottom-right-radius: 40px;
  background-color: #755f79;
  height: 90%;
  margin: var(--margin-divs);
}

/* Chat Room Container */
.chatroom-form {
  width: 100%;
  height: 40%;
  padding: var(--padding-divs);
  margin: 16px auto;
  justify-content: center;
  align-items: flex-start;
}

.chatroom, .newSession {
  justify-content: flex-start;
  align-items: center;
  width: 50%;
  height: 100%;
}

.newSession {
  border-right: 2px rgb(63, 63, 63) solid;
}

.form-control  {
  width: 100%;
}
.chat-submit {
  border: 0;
  outline: 0;
  padding: 8px;
  margin: var(--margin-divs);
  border-radius: 40px;
  text-shadow: 1px 1px 0 #292929;
  background-color: #795e7e;
  box-shadow:  7px 7px 14px #4b404e, 
              -7px -7px 14px #504952;
  transition: .5s all;
  color: rgb(197, 197, 197);
  cursor: pointer;
  width: 50%;
}
.chat-submit:hover {
  background: #5b4a5e;
  box-shadow:   inset 5px 5px 8px #504153, 
                inset -5px -5px 8px #665369;
  transition: .5s all;
}

input, select {
  margin: 10px;
  box-shadow: inset 6px 6px 9px #3d3d3d, inset -6px -6px 9px #575757;
  width: 100%;
  transition: 0.5s all;
  border: 0;
  outline: 0;
  border-radius: 10px;
  padding: 8px;
  background-color: #505050;
}

input:focus {
  box-shadow: inset 5px 5px 10px #444444, inset -5px -5px 10px #636363;
}

/* Game Buttons */
.game-button {
  margin: var(--margin-divs);
  padding: var(--padding-divs);
  width: 100%;
  height: 10%;
}
.lobby-button {
  margin: 50px;
  padding: 0;
  width: 50%;
}
.start-game,
.join-current {
  border: 0;
  outline: 0;
  margin: 0;
  padding: 10px;
  cursor: pointer;
  width: 100%;
  color: white;
}
.start-game {
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
  background-color: #4a4a4a;
}
.join-current {
  background-color: #755f79;
  margin: 5px;
}
.logout {
  width: 10%;
  height: auto;
  margin: var(--margin-divs);
  padding: var(--padding-divs);
  text-align: center;
}

/* ===================== RIGHT CONTAINER ===================== */
/* Chat Archive Container */
.chat-container {
  width: 100%;
  height: 20%;
  border-bottom: 2px solid rgba(65, 65, 65, 0.5);
  margin: 0 16px;
  border-radius: 0;
  border-top-left-radius: 40px;
  border-top-right-radius: 40px;
}
.chat-archive {
  list-style: none;
  text-align: center;
}
.chat-logbox {
  width: 100%;
  height: 80%;
  margin: 0 16px;
  border-radius: 0;
  border-bottom-left-radius: 40px;
  border-bottom-right-radius: 40px;
}


/* SLIDER ANIMATION */

/* *{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
} */

.img-slider{
  position: absolute;
  width: 800px;
  height: 450px;
  margin: 10px;
  /* background */
}

.img-slider .slide{
  z-index: 1;
  position: absolute;
  width: 100%;
  clip-path: circle(0.0% at 0 50%);
}

.img-slider .slide.active{
  clip-path: circle(150% at 0 50%);
  transition: 1s;
  transition-property: clip-path;

}

.img-slider .slide img{
  z-index: 1;
  width: 100%;
  border-radius: 5px;
}

.img-slider .slide .info{
  position: absolute;
  top: 0;
  padding: 15px 30px;
}

.img-slider .slide .info h2{
  color: #fff;
  font-size: 45px;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.img-slider .slide .info p{
  color: #fff;
  background: rgba(0, 0, 0, 0.1);
  font-size: 16px;
  width: 60%;
  padding: 10px;
  border-radius: 4px;
}

.img-slider .navigation{
  z-index: 2;
  position: absolute;
  display: flex;
  bottom: 30px;
  left: 50%;
  transform: translateX(-50%);
}

.img-slider .navigation .btn{
  background: rgba(255, 255, 255, 0.5);
  width: 12px;
  height: 12px;
  margin: 10px;
  border-radius: 50%;
  cursor: pointer;
}

.img-slider .navigation .btn.active{
  background: #2696E9;
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
}

@media (max-width: 820px){
  .img-slider{
    width: 600px;
    height: 375px;
  }

  .img-slider .slide .info{
    padding: 10px 25px;
  }

  .img-slider .slide .info h2{
    font-size: 35px;
  }

  .img-slider .slide .info p{
    width: 70%;
    font-size: 15px;
  }

  .img-slider .navigation{
    bottom: 25px;
  }

  .img-slider .navigation .btn{
    width: 10px;
    height: 10px;
    margin: 8px;
  }
}

@media (max-width: 620px){
  .img-slider{
    width: 400px;
    height: 250px;
  }

  .img-slider .slide .info{
    padding: 10px 20px;
  }

  .img-slider .slide .info h2{
    font-size: 30px;
  }

  .img-slider .slide .info p{
    width: 80%;
    font-size: 13px;
  }

  .img-slider .navigation{
    bottom: 15px;
  }

  .img-slider .navigation .btn{
    width: 8px;
    height: 8px;
    margin: 6px;
  }
}


@media (max-width: 420px){
  .img-slider{
    width: 320px;
    height: 200px;
  }

  .img-slider .slide .info{
    padding: 5px 10px;
  }

  .img-slider .slide .info h2{
    font-size: 25px;
  }

  .img-slider .slide .info p{
    width: 90%;
    font-size: 11px;
  }

  .img-slider .navigation{
    bottom: 10px;
  }
}

